# multi-ai-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: install.sh
src/: __init__.py  server.py
src/config/: __init__.py  settings.py
src/security/: __init__.py  path_validator.py  sanitizer.py
src/tools/: __init__.py  antigravity_tools.py  claude_tools.py  codex_tools.py  gemini_tools.py
src/updater/: __init__.py  registry.py  version_checker.py
