[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-ai-mcp"
version = "1.0.0"
description = "Unified MCP server for multiple AI CLI tools (Claude, Codex, Gemini, Antigravity)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "FuturizeRush" }
]
keywords = [
    "mcp",
    "claude",
    "codex",
    "gemini",
    "ai",
    "cli",
    "model-context-protocol"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
multi-ai-mcp = "src.server:main"

[project.urls]
Homepage = "https://github.com/FuturizeRush/multi-ai-mcp"
Repository = "https://github.com/FuturizeRush/multi-ai-mcp.git"
Issues = "https://github.com/FuturizeRush/multi-ai-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
